# yahtzee_ai

./: CMakeLists.txt  LICENSE  README.md
main/: main.cpp
src/: dice.cpp  dice.h  loop.h  player.cpp  player.h  scorecard.cpp  scorecard.h  utils.cpp  utils.h
